Revert "DFPL 2003 Judicial Message prioritisation WA task priority (#6107)"
This reverts commit ed141fddc920ea21b71b74a54417367eb2036597.