@@ -9,17 +9,14 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.JudicialMessageRoleType;
 import uk.gov.hmcts.reform.fpl.enums.OrganisationalRole;
-import uk.gov.hmcts.reform.fpl.enums.YesNo;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.fpl.model.event.MessageJudgeEventData;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessage;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessageMetaData;
-import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessageReply;
 import uk.gov.hmcts.reform.fpl.service.IdentityService;
 import uk.gov.hmcts.reform.fpl.service.RoleAssignmentService;
 import uk.gov.hmcts.reform.fpl.service.UserService;
-import uk.gov.hmcts.reform.fpl.service.workallocation.WorkAllocationTaskService;
 
 import java.util.List;
 import java.util.Map;
@@ -29,7 +26,6 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.fpl.enums.JudicialMessageStatus.OPEN;
-import static uk.gov.hmcts.reform.fpl.service.MessageJudgeService.SAME_DAY_URGENCY;
 import static uk.gov.hmcts.reform.fpl.utils.DateFormatterHelper.DATE_TIME_AT;
 import static uk.gov.hmcts.reform.fpl.utils.DateFormatterHelper.formatLocalDateTimeBaseUsingFormat;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
@@ -58,9 +54,6 @@ class MessageJudgeControllerAboutToSubmitTest extends MessageJudgeControllerAbst
     @MockBean
     private RoleAssignmentService roleAssignmentService;
 
-    @MockBean
-    private WorkAllocationTaskService workAllocationTaskService;
-
     @Test
     void shouldAddNewJudicialMessageAndSortIntoExistingJudicialMessageList() {
         when(userService.getOrgRoles()).thenReturn(Set.of(OrganisationalRole.LOCAL_COURT_ADMIN));
@@ -73,8 +66,7 @@ class MessageJudgeControllerAboutToSubmitTest extends MessageJudgeControllerAbst
             .relatedDocumentsLabel("related documents")
             .judicialMessageNote(MESSAGE)
             .judicialMessageMetaData(JudicialMessageMetaData.builder()
-                .urgency(SAME_DAY_URGENCY)
-                .isJudicialMessageUrgent(YesNo.YES)
+                .urgency("High urgency")
                 .recipientDynamicList(buildRecipientDynamicListNoJudges().toBuilder()
                     .value(DynamicListElement.builder()
                         .code(RECIPIENT_TYPE.toString())
@@ -108,17 +100,8 @@ class MessageJudgeControllerAboutToSubmitTest extends MessageJudgeControllerAbst
             .senderType(SENDER_TYPE)
             .fromLabel("%s (%s)".formatted(SENDER_TYPE.getLabel(), SENDER))
             .toLabel("%s (%s)".formatted(RECIPIENT_TYPE.getLabel(), MESSAGE_RECIPIENT))
-            .judicialMessageReplies(List.of(element(responseCaseData.getJudicialMessages().get(0).getValue()
-                    .getJudicialMessageReplies().get(0).getId(),
-                JudicialMessageReply.builder()
-                    .dateSent(formatLocalDateTimeBaseUsingFormat(now(), DATE_TIME_AT))
-                    .updatedTime(now())
-                    .message("Some message")
-                    .replyFrom("%s (%s)".formatted(SENDER_TYPE.getLabel(), SENDER))
-                    .replyTo("%s (%s)".formatted(RECIPIENT_TYPE.getLabel(), MESSAGE_RECIPIENT))
-                    .build())))
-            .urgency(SAME_DAY_URGENCY)
-            .isJudicialMessageUrgent(YesNo.YES)
+            .messageHistory(String.format("%s (%s) - %s", SENDER_TYPE.getLabel(), SENDER, MESSAGE))
+            .urgency("High urgency")
             .build();
 
         assertThat(responseCaseData.getJudicialMessages().get(0).getValue()).isEqualTo(expectedJudicialMessage);
